--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "bluebird": "^2.9.27",
     "lodash": "^3.9.3",
-    "read-torrent": "^1.3.0"
+    "read-torrent": "^1.3.0",
+    "request": "^2.57.0"
   },
   "devDependencies": {
     "should": "^6.0.3",
