--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "dependencies": {
+    "bencode": "^0.7.0",
     "bluebird": "^2.9.27",
     "lodash": "^3.9.3",
     "read-torrent": "^1.3.0",
